- ParserTools: removed dependency on ExtensionClass, now is 'stub'-enabled
- DocProc: removed dependency on ExtensionClass, now is 'stub'-enabled
- ParserPhase2: removed dependency on ExtensionClass, now is 'stub'-enabled
- ParserPhase2: added 'EndParserPhase2' hook
- ParserPhase2: added pattern ((magic word...)) to match more closely stock MediaWiki
- ParserPhase2: added 'varcapset' parser function
- Added 'ScriptingTools' extension
- ParserPhase2: added pattern ((%magic word...%)): parser functions executed AFTER Tidy process
- ParserPhase2: added pattern ((@magic word...@)): parser functions executed BEFORE Strip process
- Adjusted 'StubManager' to remove some PHP warnings
- Added 'svn:keywords 'Id' to all files
- WatchRight extension: removed dependency on ExtensionClass, now is 'stub'-enabled
- Added 'oversight' to the rights being managed  (see Special:Ipblocklist)
- Article.php: modified 'doDeleteArticle' method so that it does not delete RecentChanges entries (for the replicator)
- Adjusted 'ViewsourceRight' for 'stubbing'
- Adjusted 'RawRight' for 'stubbing'
- Merged functionality of CacheTools in PageFunctions
- Adjusted 'geshi' for 'stubbing'
- Adjusted 'FileSystemSyntaxColoring' for stubbing
- Adjusted 'ImageLink' for stubbing
- Adjusted 'ShowRedirectPageText' for stubbing
- Adjusted 'RecentChangesManager' for stubbing
- Adjusted 'SpecialPagesManager' for stubbing
- Adjusted 'InterWikiLinkManager' for stubbing
- Adjusted 'PageAfterAndBefore' for stubbing
- Adjusted 'FormProc' for stubbing
- Adjusted 'AutoLanguage' for stubbing
===============================
REL1_10_10: (released ...) 
- Integrated MW API from SVN @ 24515
- Fixed ApiQueryLogEvents for returning the correct 'log_id' value
- UserSettingsChangedLog: changed log entry format to be more useful for the replicator
- UserSettingsChangedLog: Fixed multiple entries in the log when the user changes a preference setting
- UserSettingsChangedLog: Fixed to not add log entries upon account creation

